[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kingery-bulmash"
authors = [
  { name="fcento100"},
]
description = "Kingery-Bulmash Blast Wave Characteristics Calculator"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
keywords = ["blast", "kingery","bulmash","tnt"]

[project.urls]
Homepage = "https://github.com/fcento100/kingery-bulmash"
Issues = "https://github.com/fcento100/kingery-bulmash/issues"

[tool.hatch.version]
path = "src/kingery_bulmash/__about__.py"